<resources>
    <string name="app_name">Easyloan</string>
    <string name="slaptext">EMI Calculator</string>
    <string name="currency_format">%s $</string>
    <string name="simple_interest_result">Simple Interest: %s</string>
    <string name="principal_amount_result">Principal Amount: %s</string>
    <string name="total_amount_result">Total Amount: %s</string>
    <string name="original_price">Original Price: %s</string>
    <string name="gst_amount">GST Amount: %s</string>
    <string name="net_amount">Net Amount: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bankName_Allahabad">Allahabad Bank</string>
    <string name="bankName_Andhra_Bank">Andhra Bank</string>
    <string name="bankName_Axis_Bank">Axis Bank</string>
    <string name="bankName_Bandhan_Bank">Bandhan Bank</string>
    <string name="bankName_Bank_of_Baroda">Bank of Baroda</string>
    <string name="bankName_Bank_of_India">Bank of India</string>
    <string name="bankName_Bank_of_Maharashtra">Bank of Maharashtra</string>
    <string name="bankName_Barclays_Bank">Barclays Bank</string>
    <string name="bankName_Bharatiya_Mahila_Bank">Bharatiya Mahila Bank</string>
    <string name="bankName_Canara_Bank">Canara Bank</string>
    <string name="bankName_Corporation_Bank">Corporation Bank</string>
    <string name="bankName_Citi_Bank">Citi Bank</string>
    <string name="bankName_Dhanalaxmi_Bank">Dhanalaxmi Bank</string>
    <string name="bankName_Deutsche_Bank">Deutsche Bank</string>
    <string name="bankName_Federal_Bank">Federal Bank</string>
    <string name="bankName_HDFC_Bank">HDFC Bank</string>
    <string name="bankName_HSBC_Bank">HSBC Bank</string>
    <string name="bankName_ICICI_Bank">ICICI Bank</string>
    <string name="bankName_IDFC_Bank">IDFC Bank</string>
    <string name="bankName_SBT_Bank">SBT Bank</string>
    <string name="bankName_Indian_Overseas_Bank">Indian Overseas Bank</string>
    <string name="bankName_IndusInd_Bank">IndusInd Bank</string>
    <string name="bankName_Karnataka_Bank">Karnataka Bank</string>
    <string name="bankName_Kotak_Mahindra_Bank">Kotak Mahindra Bank</string>
    <string name="bankName_Citi_Union_Bank">Citi Union Bank</string>
    <string name="bankName_Panjab_National_Bank">Panjab National Bank</string>
    <string name="bankName_Punjab_and_Sind_Bank">Punjab &amp; Sind Bank</string>
    <string name="bankName_Saraswat_Bank">Saraswat Bank</string>
    <string name="bankName_South_Indian_Bank">South Indian Bank</string>
    <string name="bankName_Standard_Chartered_Bank">Standard Chartered Bank</string>
    <string name="bankName_State_Bank_of_India">State Bank of India</string>
    <string name="bankName_Syndicate_Bank">Syndicate Bank</string>
    <string name="bankName_UCO_Bank">UCO Bank</string>
    <string name="bankName_Union_Bank_of_India">Union Bank of India</string>
    <string name="bankName_United_Together_Bank">United Together Bank</string>
    <string name="bankName_Vijaya_Bank">Vijaya Bank</string>
    <string name="header_call_customer_care">Call Customer Care</string>
    <string name="header_get_mini_statement">Get Mini Statement</string>
    <string name="header_check_bank_balance">Check Bank Balance</string>
    <string name="language_english">English</string>
    <string name="language_german">German</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_italian">Italian</string>
    <string name="language_korean">Korean</string>
    <string name="language_malay">Malay</string>
    <string name="language_polish">Polish</string>
    <string name="home_1">Equated Monthly Instalment</string>
    <string name="home_2">The EMI calculator helps you arrive at the right home loan amount that best fits your monthly budget, by helping you decide the loan EMI and tenure most suitable to your financial position</string>
    <string name="header_initial_amount">Initial Amount</string>
    <string name="header_rate_of_gst">Rate of GST (%)</string>
    <string name="header_add_gst">Add GST +</string>
    <string name="header_net_amount">Net Amount :</string>
    <string name="header_gst_amount">GST Amount :</string>
</resources>