<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slapscreenbg"
    android:orientation="vertical"
    tools:context=".Fragment.GstCalculateFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/slapscreenbg">

        <ImageView
            android:id="@+id/gst_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:onClick="txt_back"
            android:src="@drawable/round_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="GST calculate"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_6sdp"
                            android:text="@string/header_initial_amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />


                        <EditText
                            android:id="@+id/initial_amount_edit_text"
                            android:layout_width="@dimen/_260sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/black_border"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_6sdp"
                            android:text="@string/header_rate_of_gst"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />




                        <EditText
                            android:id="@+id/gst_rate_edit_text"
                            android:layout_width="@dimen/_260sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/black_border"
                            android:inputType="numberDecimal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_7sdp"
                app:cardElevation="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
android:id="@+id/radio_group"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/add_gst_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/header_add_gst"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:buttonTint="@color/black" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/subtract_gst_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="Remove Gst"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:buttonTint="@color/black" />

            </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btn_emi_reset"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:elevation="@dimen/_10sdp"
                        android:padding="@dimen/_1sdp"
                        android:text="Reset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        app:cornerRadius="@dimen/_10sdp" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btn_emi_calculate"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:elevation="@dimen/_10sdp"
                        android:padding="@dimen/_1sdp"
                        android:text="Calculate"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        app:cornerRadius="@dimen/_10sdp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/resultduration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                app:cardElevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/black_border"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/header_net_amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/net_amount_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="@dimen/_10sdp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/header_gst_amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/gst_amount_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="@dimen/_10sdp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:fontFamily="@font/inter_regular"
                            android:text="Original price :-"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/total_gst_involves"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="@dimen/_10sdp" />
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>